syntax = "proto3";
package upload; 

service UploadService {  
    rpc UploadVideo(stream UploadRequest) returns (UploadResponse);  
  }

message UploadRequest {  
    bytes chunk = 1;  
}
  

message UploadResponse {  
    string videoId = 1;
    string message = 2;  
  }
  